# wagtail-tailwind-blog

./: .browserslistrc  .gitignore  .stylelintrc.json  .travis.yml  Dockerfile  Makefile  README.md  data.json  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  heroku.yml  host.yaml  inventory.py  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  router.conf  setup.cfg  tailwind.config.js
.env/: .dev-sample  .prod-sample
.github/: dependabot.yml
.github/workflows/: main.yaml
ab_comment/: __init__.py  apps.py  views.py
ab_comment/templatetags/: ab_comment_tags.py
blog/: blocks.py  context_processors.py  models.py  urls.py
blog/fixtures/: blogdemo.json
blog/md_converter/: utils.py
blog/migrations/: 0001_initial.py  0002_auto_20170624_0756.py  0002_auto_20180614_0223.py  0002_postpage_body.py  0003_auto_20170624_0859.py  0003_postpage_post_date.py  0004_alter_postpage_body.py  0004_auto_20201221_0258.py  0004_postpage_date.py  0005_formfield_formpage.py  0005_postpage_header_image.py  0006_auto_20170726_1253.py  0006_postpage_search_image.py  0007_landingpage.py  0008_auto_20171223_1412.py  0009_auto_20171224_1249.py  (+1 more)
compose/: auto_deploy_do.sh
config/: docker_start.sh  urls.py  wsgi.py
custom_comments/: apps.py  forms.py  receivers.py  urls.py  views.py  wagtail_hooks.py
frontend/: README.md  package-lock.json  package.json
wagtail_app/: asgi.py  settings.py  urls.py  wsgi.py
wagtail_bootstrap_blog/: urls.py  wsgi.py
wagtail_tuto/: urls.py  wsgi.py
wagtailmd/: utils.py  wagtail_hooks.py
(+195 files in other folders)
